# responsible-ai-toolbox-tracker

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  SUPPORT.md  babel.config.js  bump_version.py  cleanup.py  install.json  package.json  pyproject.toml  release_bump.ts  setup.py  tsconfig.json  webpack.config.js
.github/workflows/: ci.yml  prep-release.yml  publish-release.yml  publish-release_v2.yml  release-npmjs.yml  release-pypi.yml
docs/: Makefile  basics_disaggregated.rst  conf.py  creating_mitigations.rst  getting_started.rst  how.rst  index.rst  install_guide.rst  known_issues.rst  metric_support.rst  model_comparison.rst  project_management.rst
docs/_build/doctrees/: api.doctree  basics_disaggregated.doctree  cohort_management.doctree  creating_mitigations.doctree  environment.pickle  frequent_asked.doctree  frequently_asked.doctree  gallery.doctree  get_involved.doctree  getting_started.doctree  how.doctree  index.doctree  install_guide.doctree  integration_MLFlow.doctree  integration_to_libs.doctree  known_issues.doctree  metric_support.doctree  model_comparison.doctree  notebook_model_management.doctree  overview.doctree  project_management.doctree  rename.doctree  tour.doctree  user_guide.doctree
docs/_build/doctrees/databalanceanalysis/: aggregate_measures.doctree  databalanceanalysis.doctree  distribution_measures.doctree  feature_measures.doctree  intro.doctree
docs/_build/doctrees/dataprocessing/: case_studies.doctree  case_study_utils.doctree  dataprocessing.doctree  intro.doctree  model_utils.doctree  module_tests.doctree  pipeline.doctree  toy_data.doctree
docs/_build/doctrees/dataprocessing/encoder/: encoder.doctree  ohe.doctree  ordinal.doctree
docs/_build/doctrees/dataprocessing/feat_sel/: catboost.doctree  correlation.doctree  feat_sel.doctree  seq.doctree
docs/_build/doctrees/dataprocessing/imputer/: basic.doctree  imputer.doctree
docs/_build/doctrees/dataprocessing/sampler/: rebalance.doctree  sampler.doctree  synthesizer.doctree
docs/_build/doctrees/dataprocessing/scaler/: minmax.doctree  normalize.doctree  power.doctree  quantile.doctree  robust.doctree  scaler.doctree  standard.doctree
docs/_build/html/: .buildinfo  basics_disaggregated.html  cohort_management.html  creating_mitigations.html  frequent_asked.html  frequently_asked.html  genindex.html  get_involved.html  getting_started.html  how.html  index.html  install_guide.html  integration_mlflow.html  known_issues.html  metric_support.html  model_comparison.html  notebook_model_management.html  objects.inv  overview.html  project_management.html  py-modindex.html  rename.html  search.html  searchindex.js  tour.html  user_guide.html
docs/_build/html/_sources/: basics_disaggregated.rst.txt  cohort_management.rst.txt  creating_mitigations.rst.txt  frequent_asked.rst.txt  frequently_asked.rst.txt  gallery.rst.txt  get_involved.rst.txt  getting_started.rst.txt  how.rst.txt  index.rst.txt  install_guide.rst.txt  integration_MLFlow.rst.txt  metric_support.rst.txt  model_comparison.rst.txt  notebook_model_management.rst.txt  overview.rst.txt  project_management.rst.txt  rename.rst.txt  tour.rst.txt  user_guide.rst.txt
docs/_build/html/dataprocessing/: case_studies.html  case_study_utils.html  dataprocessing.html  intro.html  model_utils.html  module_tests.html  pipeline.html  toy_data.html
docs/_build/html/dataprocessing/encoder/: encoder.html  ohe.html  ordinal.html
docs/_build/html/dataprocessing/feat_sel/: catboost.html  correlation.html  feat_sel.html  seq.html
docs/_build/html/dataprocessing/imputer/: basic.html  imputer.html
docs/_build/html/dataprocessing/sampler/: rebalance.html  sampler.html  synthesizer.html
docs/_build/html/dataprocessing/scaler/: minmax.html  normalize.html  power.html  quantile.html  robust.html  scaler.html  standard.html
help/: ErrorMitigation.md  Overview.md
jupyter-config/nb-config/: raitracker.json
jupyter-config/server-config/: raitracker.json
raitracker/: README.md  __init__.py  _version.py  handlers.py
raitracker/src/: __init__.py  registration.py
raitracker/src/core/: __init__.py  component_types.py  utils.py
raitracker/src/dataset/: __init__.py  load_data.py
raitracker/src/metrics/: __init__.py  classification.py  general.py  regression.py  utils.py
raitracker/test/: conftest.py  constants.py  test_register.py
raitracker/training/src/: convert_datasets_to_txt.py  generate_models.sh  save_model_tf.py  save_model_torch.py  save_model_torch_light.py  toy_dataset.py  train_sklearn_estimator.py
raitracker/training/src/model/: __init__.py  model.py  summary.py  torch_light.py
raitracker/training/src/model/tf/: classifier.py  classifier_seq.py  (+2 more)
src/: globals.d.ts  index.ts
src/app/: index.tsx
src/app/menus/: mainMenu.tsx  tooltips.tsx
src/app/panels/: index.tsx
src/app/panels/cohorts/: cohort.ts  cohortList.tsx  cohortManager.tsx  cohortSettings.tsx  cohortTypes.ts  cohortUtils.ts  createCohort.tsx  deleteCohort.tsx  duplicateCohort.tsx  editCohort.tsx  index.ts
src/app/panels/models/: absolute.tsx  colorSelector.tsx  comparative.tsx  editModelReg.tsx  heatmap.tsx  index.tsx  modelReg.tsx  modelTypes.ts  modelsData.tsx  modelsUtils.tsx
src/app/panels/notebook/: bookPanel.tsx  commands.ts  deleteNotebook.tsx  importNotebook.tsx
src/app/panels/projects/: activeProject.tsx  activeProjectData.tsx  confirmDelete.tsx  deleteProject.tsx  index.ts  newProject.tsx  newProjectModal.tsx  openProject.tsx  projectList.tsx  projectUtils.ts  propertiesModal.tsx
src/configs/: configs.json  defaultGhost.ipynb  mitigationHelp.md  mlPlatforms.json  problemTypesMetrics.json
src/core/: components.ts  handler.ts  manager.ts  mlflowUtils.ts  notebookUtils.ts  store.ts  uploadUtil.ts  utils.ts
style/: cohorts.css  index.css  modals.css  models.css
tour/: 5 estimators.ipynb  adult-test-sample.csv  adult-train.csv  balance all data.ipynb  balance per cohort both.ipynb  target balance per cohort.ipynb
tour/data/: adult-test.csv
(+5 files in other folders)
